--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "polished": "^4.0.5",
     "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-switch": "^6.0.0",
