--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/server.ts"
+    "dev": "ts-node src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -13,6 +14,10 @@
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "graphql-tools": "^7.0.2",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
